# apc_2016

./: .gitignore  CMakeLists.txt  README.md  package.xml
json/: stow.json  task.json
launch/: apc_2016.launch
src/arduino/: servo.ino
src/arduino/ros_lib/apc_2016/: ManObjSrv.h  PosArmSrv.h  RecObjSrv.h  SnsObjSrv.h  WghObjSrv.h
src/arduino/servo/: servo.ino
src/dep_obj/: dep_obj_srv.py  image_converter.cpp
src/dep_obj_stb/: dep_obj_srv_stb.py
src/man_obj_stb/: man_obj_srv_stb.py
src/pos_arm/launch/: ur10_acutalArm.launch  ur10_mod.launch  ur_gaz_mod.launch
src/pos_arm/meshes/: End_effector____.STL  End_effector_notgd.stl  end_effector.stl  kinect-1-1.STL  shelves.stl  tote_s.stl
src/pos_arm/src/: a.out  arm_server.py  cartesian.py  ee_move.py  scene_picking.py
src/pos_arm/urdf/: ur10_aug.xacro  ur10_aug1.xacro  ur10_aug_gen.urdf  ur10_aug_old.xacro  ur10_aug_param.urdf  ur10_aug_param.xacro  ur10_aug_robot.xacro  ur10_aug_robot_gen.urdf  vel.yaml
src/pos_arm_stb/: pos_arm_srv_stb.py
src/rec_obj/launch/: rec_obj.launch
src/rec_obj/src/: client_recognise_object.py  detectObjects.py  keypoints_management.py  service_recognise_object.py  test.py  utils.py
src/rec_obj/src/keypoints/: champion_copper_plus_spark_plug_1.key_orb  champion_copper_plus_spark_plug_1.key_sift  champion_copper_plus_spark_plug_1.key_surf  champion_copper_plus_spark_plug_2.key_orb  champion_copper_plus_spark_plug_2.key_sift  champion_copper_plus_spark_plug_2.key_surf  champion_copper_plus_spark_plug_3.key_orb  champion_copper_plus_spark_plug_3.key_sift  champion_copper_plus_spark_plug_3.key_surf  champion_copper_plus_spark_plug_4.key_orb  champion_copper_plus_spark_plug_4.key_sift  champion_copper_plus_spark_plug_4.key_surf  champion_copper_plus_spark_plug_5.key_orb  champion_copper_plus_spark_plug_5.key_sift  champion_copper_plus_spark_plug_5.key_surf  crayola_64_ct_1.key_orb  crayola_64_ct_1.key_sift  crayola_64_ct_1.key_surf  crayola_64_ct_2.key_orb  crayola_64_ct_2.key_sift  crayola_64_ct_2.key_surf  crayola_64_ct_3.key_orb  crayola_64_ct_3.key_sift  crayola_64_ct_3.key_surf  crayola_64_ct_4.key_orb  crayola_64_ct_4.key_sift  crayola_64_ct_4.key_surf  crayola_64_ct_5.key_orb  crayola_64_ct_5.key_sift  crayola_64_ct_5.key_surf  crayola_64_ct_6.key_orb  crayola_64_ct_6.key_sift  crayola_64_ct_6.key_surf  dove_beauty_bar_2.key_orb  dove_beauty_bar_2.key_sift  (+171 more)
src/rec_obj_stb/: rec_obj_srv_stb.py
src/sns_obj_stb/: sns_obj_srv_stb.py
src/tsk_pln/: dep_obj.py  man_obj.py  pos_arm.py  rec_obj.py  sns_obj.py  tsk_pln.py  tsk_pln_tst.py  wgh_obj.py
src/wgh_obj_stb/: wgh_obj_srv_stb.py
srv/: DepObjSrv.srv  ManObjSrv.srv  PosArmSrv.srv  RecObjSrv.srv  SnsObjSrv.srv  WghObjSrv.srv
